--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ main {
 	border: 1px solid #ffffff;
 	background-color: #00000081;
 	width: 250px;
-	height: 375px;
+	height: 250px;
 	display: inline-block;
 	margin-left: 150px;
 	margin-top: 30px;
@@ -125,6 +125,13 @@ main {
 
 .indice ol li a {
 	color: #CCFFFF;
+}
+
+#jogabilidade {
+	text-align: center;
+	border: 1px solid #ffffff;
+	width: 551px;
+	height: 314px;
 }
 
 hr {
